--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1 style="color: red;">Asaduzzaman</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nobis impedit quas cupiditate totam minima, asperiores beatae harum ea tenetur.</p>
-<p class="khokon">Asaduzzaman Khokon</p>
+<header>
+    <div class="navbar">
+        <ul>
+            <li><a href="">Asaduzzaman</a></li>
+        </ul>
+    </div>
+</header>
     
 </body>
 </html>
