--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="navbar">
         <ul>
             <li><a href="">Asaduzzaman</a></li>
+             <li><a href="">Khokon</a></li>
+             <li><a href="">Saeid</a></li>
         </ul>
     </div>
 </header>
